[project]
name = "jaspe"
version = "1.0.0"
description = "Outil CLI de déploiement pour FastAPI + Vite/React/TypeScript"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Mallevaey Lino", email = "mallevaey.lino@coodlab.fr" }
]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
jaspe = "jaspe.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jaspe"]
