[project]
name = "jaspe"
version = "1.0.8"
description = "Outil CLI de déploiement pour FastAPI + Vite/React/TypeScript"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Mallevaey Lino", email = "mallevaey.lino@coodlab.fr" }
]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer>=0.24.1",
    "rich>=14.3.3",
    "tomli>=2.0.1; python_version < '3.11'",
    "starlette>=0.45.0",
    "uv>=0.11.3",
    "fastapi>=0.110.0",
    "uvicorn>=0.42.0",
]

[project.scripts]
jaspe = "jaspe.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jaspe"]
